Fixed mailing lists not showing in confirmation screen

--- a/src/app/create-campaign/campaign-confirmation/campaign-confirmation.style.css
+++ b/src/app/create-campaign/campaign-confirmation/campaign-confirmation.style.css
@@ -13,15 +13,3 @@ h3 {
        -moz-box-shadow: 0 10px 6px -6px #777;
             box-shadow: 0 10px 6px -6px #777;
 }
-
-.chosen-lists {
-  background-color: #ff6193;
-  color: white;
-  border-radius: 3px;
-  padding: 1em;
-  margin-bottom: 0.5em;
-  max-width: 500px;
-  width: 100%;
-  word-wrap: break-word;
-  white-space: inherit
-}
